add_executable(model1.x model1_190103714.cc)
target_link_libraries(model1.x PRIVATE SimpleBounce)
add_executable(model1a.x model1a_190610829.cc)
target_link_libraries(model1a.x PRIVATE SimpleBounce)
add_executable(model1b.x model1b_190610829.cc)
target_link_libraries(model1b.x PRIVATE SimpleBounce)
add_executable(model2.x model2_190103714.cc)
target_link_libraries(model2.x PRIVATE SimpleBounce)
add_executable(model2a.x model2a_190610829.cc)
target_link_libraries(model2a.x PRIVATE SimpleBounce)
add_executable(model2b.x model2b_190610829.cc)
target_link_libraries(model2b.x PRIVATE SimpleBounce)
add_executable(model3.x model3_190103714.cc)
target_link_libraries(model3.x PRIVATE SimpleBounce)
add_executable(model4.x model4_190103714.cc)
target_link_libraries(model4.x PRIVATE SimpleBounce)
add_executable(model5.x model5_190103714.cc)
target_link_libraries(model5.x PRIVATE SimpleBounce)
add_executable(model6.x model6_190103714.cc)
target_link_libraries(model6.x PRIVATE SimpleBounce)
add_executable(model7.x model7_190103714.cc)
target_link_libraries(model7.x PRIVATE SimpleBounce)
add_executable(model8.x model8_190103714.cc)
target_link_libraries(model8.x PRIVATE SimpleBounce)
